Fixed layout issues

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -5,21 +5,21 @@
     }
     .fullscreen-when-narrow {
         left: 0px !important;
-        right: 0px !important;
+        /*right: 0px !important;*/
         top: 0px !important;
-        bottom: 0px !important;
-        width: auto !important; /*was 100vw*/
-        height: auto !important; /*was 100vh*/
+        /*bottom: 0px !important;*/
+        width: 100% !important; /*was 100vw*/
+        height: 100% !important; /*was 100vh*/
     }
 }
 
 .fullscreen {
     left: 0px !important;
-    right: 0px !important;
+    /*right: 0px !important;*/
     top: 0px !important;
-    bottom: 0px !important;
-    width: auto !important; /*was 100vw*/
-    height: auto !important; /*was 100vh*/
+    /*bottom: 0px !important;*/
+    width: 100% !important; /*was 100vw*/
+    height: 100% !important; /*was 100vh*/
     transition: left 0.4s, right 0.4s, top 0.4s, bottom 0.4s, width 0.4s, height 0.4s;
 }
 
